fix spacing

--- a/css/portfolio-site-f04edd.webflow.css
+++ b/css/portfolio-site-f04edd.webflow.css
@@ -1482,7 +1482,7 @@ p {
   place-self: center;
 }
 
-#w-node-_3446d8f3-450f-ebf2-aa9b-ae726ce43a98-dac0bf68, #w-node-_0c9560f2-a7f0-3455-b9f6-3b44c3268a75-dac0bf68, #w-node-f18c67b4-305e-4136-e012-1ec8931a5a59-dac0bf68, #w-node-f4bfd50f-e429-9cf8-0ae8-5c5cca91daeb-dac0bf68, #w-node-f2300eb6-0206-bca8-79ac-f1a56dc8c169-dac0bf68, #w-node-b96e48d0-75fe-83de-d276-cc15c9f283cb-dac0bf68, #w-node-_278c6ca2-9c12-05b3-1071-7d32036d5625-dac0bf68, #w-node-b3de1118-d0dd-8ef9-c0ad-29778f1c1caa-dac0bf68 {
+#w-node-f4bfd50f-e429-9cf8-0ae8-5c5cca91daeb-dac0bf68, #w-node-f2300eb6-0206-bca8-79ac-f1a56dc8c169-dac0bf68, #w-node-b96e48d0-75fe-83de-d276-cc15c9f283cb-dac0bf68, #w-node-_278c6ca2-9c12-05b3-1071-7d32036d5625-dac0bf68, #w-node-b3de1118-d0dd-8ef9-c0ad-29778f1c1caa-dac0bf68 {
   grid-area: span 1 / span 2 / span 1 / span 2;
 }
 
